--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                 stream on. You can chill with us, talk, game, or participate in group watch. It's all about having fun
                 and forgetting about the drama.</p>
             <br><br>
-            <h3><a class="discordinvite" href="https://thetimevortex.net/discord" target="_blank" rel="noopener">Join the Discord</a>
+            <h3><a class="discordinvite" href="https://thetimevortex.net/discord" target="_blank" rel="noopener">Join
+                    the Discord</a>
             </h3>
         </div>
     </div>
@@ -110,7 +111,8 @@
             <p>
                 This Realm is a <strong>Bedrock modpack/addon experience</strong> — not just vanilla Minecraft!
                 <br><br>
-            <h3><a class="invite" href="https://realms.gg/RAdcUY9U6UL_pCM" target="_blank" rel="noopener">Join the Realm</a></h3>
+            <h3><a class="invite" href="https://realms.gg/RAdcUY9U6UL_pCM" target="_blank" rel="noopener">Join the
+                    Realm</a></h3>
             </p>
             <br>
             <h3>Important Information</h3>
@@ -123,33 +125,38 @@
         </div>
     </div>
 
-<div class="secondary-container">
-  <div class="games">
-    <h1>Browser Games</h1>
-    <p>Explore browser games created by <strong>TheDoctorTTV</strong>, built for fun and seamless OBS integration.</p>
+    <div class="secondary-container">
+        <div class="games">
+            <h1>Browser Games</h1>
+            <p>Explore browser games created by <strong>TheDoctorTTV</strong>, built for fun and seamless OBS
+                integration.</p>
 
-    <ul>
-      <li>
-        <h2><a href="https://rps.thetimevortex.net" target="_blank" rel="noopener">Rock Paper Scissors</a></h2>
-        <p>An interactive RPS game designed as a stream overlay for OBS.</p>
-        <p><a href="https://cdn.thetimevortex.net/RPS-StreamOverlay-Game-Docs.pdf" target="_blank" rel="noopener">View Documentation (PDF)</a></p>
-      </li>
+            <ul>
+                <li>
+                    <h2><a href="https://rps.thetimevortex.net" target="_blank" rel="noopener">Rock Paper Scissors</a>
+                    </h2>
+                    <p>An interactive RPS game designed as a stream overlay for OBS.</p>
+                    <p><a href="https://cdn.thetimevortex.net/RPS-StreamOverlay-Game-Docs.pdf" target="_blank"
+                            rel="noopener">View Documentation (PDF)</a></p>
+                </li>
 
-      <li>
-        <h2><a href="https://simon-says.thetimevortex.net" target="_blank" rel="noopener">Simon Says</a></h2>
-        <p>The classic memory game—test your reflexes and memory skills in browser form.</p>
-      </li>
-    </ul>
-  </div>
-</div>
-
-<div class="secondary-container">
-    <div class="tools">
-        <h1>Discord Timestamp Generator</h1>
-        <p>Use this tool to create markdown text which displays times in each user's local timezone. Just input a time and copy the markdown below into Discord.</p>
-        <a href="discord-timestamp.html">Discord Timestamp Generator</a>
+                <li>
+                    <h2><a href="https://simon-says.thetimevortex.net" target="_blank" rel="noopener">Simon Says</a>
+                    </h2>
+                    <p>The classic memory game—test your reflexes and memory skills in browser form.</p>
+                </li>
+            </ul>
+        </div>
     </div>
-</div>
+
+    <div class="secondary-container">
+        <div class="tools">
+            <h1>Discord Timestamp Generator</h1>
+            <p>Use this tool to create markdown text which displays times in each user's local timezone. Just input a
+                time and copy the markdown below into Discord.</p>
+            <a href="discord-timestamp.html">Discord Timestamp Generator</a>
+        </div>
+    </div>
 
 
 
