Organize static assets into pages and assets directories

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -7,7 +7,7 @@
   <title>TheTimeVortex — Admin</title>
 
   <!-- Styles & Icons -->
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="/assets/styles/style.css" />
   <link rel="shortcut icon" type="image/x-icon" href="/icons/WebsiteLogo.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="/icons/WebsiteLogo.ico">
   <link rel="icon" type="image/png" sizes="192x192" href="/icons/WebsiteLogo.ico">
@@ -16,13 +16,13 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="TheTimeVortex — Admin" />
   <meta property="og:description" content="Site admin dashboard for TheTimeVortex." />
-  <meta property="og:url" content="https://thetimevortex.net/admin.html" />
+  <meta property="og:url" content="https://thetimevortex.net/pages/admin.html" />
   <meta property="og:image" content="/icons/WebsiteLogo.ico" />
 
   <!-- Header/Footer & Theme -->
-  <script src="/js/header-footer.js"></script>
-  <script src="/js/darkmode.js" defer></script>
-  <script src="/public/auth.js" defer></script>
+  <script src="/assets/scripts/header-footer.js"></script>
+  <script src="/assets/scripts/darkmode.js" defer></script>
+  <script src="/assets/scripts/auth.js" defer></script>
 
   <!-- Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
