--- a/pages/creators/thedoctorttv.html
+++ b/pages/creators/thedoctorttv.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/assets/styles/style.css">
     <title>TheTimeVortex</title>
     <link rel="shortcut icon" type="image/x-icon" href="\icons\WebsiteLogo.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="\icons\WebsiteLogo.ico">
@@ -12,11 +12,11 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="TheTimeVortex" />
     <meta property="og:description" content="A group of creators making entertainment." />
-    <meta property="og:url" content="https://thetimevortex.net" />
+    <meta property="og:url" content="https://thetimevortex.net/pages/creators/thedoctorttv.html" />
     <meta property="og:image" content="icons/WebsiteLogo.ico" />
-    <script src="/js/header-footer.js"></script>
-    <script type="text/javascript" src="/js/darkmode.js" defer></script>
-    <script src="/public/auth.js"></script>
+    <script src="/assets/scripts/header-footer.js"></script>
+    <script type="text/javascript" src="/assets/scripts/darkmode.js" defer></script>
+    <script src="/assets/scripts/auth.js"></script>
     <script>
         (function () {
             const darkmode = localStorage.getItem('darkmode');
@@ -42,133 +42,135 @@
         <div class="main">
             <h1>About Me</h1>
             <p class="about-me">
-                I am <Strong>Azzy123</Strong> a VRChat Roleplayer and 3D Modeler, and Streamer.
-                <br>
-            <ul>
-                <li>Co-Owner of The Crimson Flame (Friend Group)</li>
-                <li>Head DM for The Vix Inn</li>
-                <li>I Actively Roleplay: The Vix Inn, Red Diamonds, & Your Cuppa RP</li>
-                <li>Current developer for Playinthirdperson (Beat Saber Mod)</li>
-                <li>Developer for The Sanctuary Mirage (VRChat World)</li>
-            </ul>
+                Hey, I'm <strong>TheDoctor</strong>! You can learn more about me and stay in touch through
+                my YouTube, Twitch, Discord, and other social media. Basically, I'm a Time Lord turned Demon Lord, and
+                this is my 121,027th regeneration.
+                <br><br>
+                I'm a huge weeb, I've seen tons of anime, I'm always keeping up with new releases, and have read tons of
+                manga and
+                light novels. Oh, and fun fact: I built this whole website myself, no Wix, Squarespace, or
+                anything like that. (No hate to those who use 'em, though.)
             </p>
             <div class="pfp-container">
-                <img class="pfp" src="/PFPs/azzy123-pfp.webp" alt="Azzy123">
+                <img class="pfp" src="/icons/TheDoctor-PFP.webp" alt="TheDoctorTTV">
             </div>
         </div>
         <div class="secondary">
-            <h1>Hazura the Kingdom of Magic Discord!</h1>
-            <p>Come join Hazura the Kingdom of Magic Discord Server, here you can talk, hangout and get notified when I
-                go live. </p>
+            <h1>TheTimeVortex Discord!</h1>
+            <p>Come join the Discord server! You'll get notified when I'm live on Twitch and YouTube, or you can just
+                chill with us, talk, game, or watch stuff. It's all about having fun and forgetting about the drama, you
+                know? </p>
             <br><br>
-            <h3><a class="discordinvite" href="https://discord.gg/YCMxKy8" target="_blank">Join</a></h3>
+            <h3><a class="discordinvite" href="https://thetimevortex.net/discord" target="_blank">Join</a></h3>
         </div>
     </div>
 
     <div class="section-container">
         <div class="item-list">
-            <h1>Azzy123's Social Media</h1>
+            <h1>TheDoctorTTV's Social Media</h1>
             <br><br>
             <ul class="icon-group">
                 <li class="card">
-                    <a href="https://www.youtube.com/@azzy1235" target="_blank">
+                    <a href="https://youtube.com/@thedoctorttv" target="_blank">
                         <img src="/icons/youtube.svg" alt="Youtube">
                         <span class="creator-name">Youtube</span>
                     </a>
                 </li>
 
                 <li class="card">
-                    <a href="https://www.twitch.tv/azzy123" target="_blank">
+                    <a href="https://twitch.tv/thedoctorttv" target="_blank">
                         <img src="/icons/twitch.svg" alt="Twitch">
                         <span class="creator-name">Twitch</span>
                     </a>
                 </li>
 
                 <li class="card">
-                    <a href="https://kick.com/azzy123" target="_blank">
+                    <a href="https://kick.com/thedoctorttv" target="_blank">
                         <img src="/icons/kick-logo.svg" alt="Kick">
                         <span class="creator-name">Kick</span>
                     </a>
                 </li>
 
                 <li class="card">
-                    <a href="http://scoresaber.com/u/76561198383153362" target="_blank">
-                        <img src="/icons/scoresaber.svg" alt="ScoreSaber">
-                        <span class="creator-name">ScoreSaber</span>
-                    </a>
-                </li>
-
-                <li class="card">
-                    <a href="http://beatleader.xyz/u/2668/beatleader/date/1" target="_blank">
-                        <img src="/icons/beatleader.webp" alt="BeatLeader">
-                        <span class="creator-name">BeatLeader</span>
-                    </a>
-                </li>
-
-                <li class="card">
-                    <a href="https://discord.gg/YCMxKy8" target="_blank">
-                        <img src="/icons/Discord.svg" alt="Discord">
-                        <span class="creator-name">Hazura</span>
-                    </a>
-                </li>
-
-                <li class="card">
-                    <a href="https://discord.gg/Jxg8AewSSZ" target="_blank">
-                        <img src="/icons/Discord.svg" alt="Discord">
-                        <span class="creator-name">Crimson Flame</span>
-                    </a>
-                </li>
-
-                <li class="card">
-                    <a href="https://www.youtube.com/@Asrielnotvods" target="_blank">
+                    <a href="https://www.youtube.com/@TheDoctorTTV24-7" target="_blank">
                         <img src="/icons/youtube.svg" alt="Youtube">
-                        <span class="creator-name">Asriel VODs</span>
+                        <span class="creator-name">24/7 VODs</span>
                     </a>
                 </li>
 
                 <li class="card">
-                    <a href="https://x.com/azzy123_" target="_blank">
-                        <img src="/icons/twitter.svg" alt="X">
-                        <span class="creator-name">Twitter / X</span>
+                    <a href="https://twitter.com/thedoctorttv" target="_blank">
+                        <img src="/icons/twitter.svg" alt="Twitter">
+                        <span class="creator-name">Twitter (X)</span>
                     </a>
                 </li>
 
                 <li class="card">
-                    <a href="https://bsky.app/profile/azzy123.bsky.social" target="_blank">
-                        <img src="/icons/bluesky.svg" alt="Bluesky">
-                        <span class="creator-name">Bluesky</span>
+                    <a href="https://bsky.app/profile/thedoctorttv.bsky.social" target="_blank">
+                        <img src="/icons/bluesky.svg" alt="BlueSky">
+                        <span class="creator-name">BlueSky</span>
                     </a>
                 </li>
 
                 <li class="card">
-                    <a href="https://azzy123.carrd.co/#" target="_blank">
-                        <img src="/icons/carrd.webp" alt="Carrd">
-                        <span class="creator-name">Carrd</span>
+                    <a href="https://www.instagram.com/thedoctorttv/" target="_blank">
+                        <img class="theme-icon" src="/icons/Instagram_Glyph_Black.svg"
+                            data-light-icon="/icons/Instagram_Glyph_Black.svg"
+                            data-dark-icon="/icons/Instagram_Glyph_White.svg" alt="Instagram">
+                        <span class="creator-name">Instagram</span>
                     </a>
                 </li>
 
                 <li class="card">
-                    <a href="https://trello.com/b/mycumrgi/commission-line" target="_blank">
-                        <img src="/icons/trello.svg" alt="Trello">
-                        <span class="creator-name">Trello</span>
+                    <a href="https://github.com/TheDoctorTTV" target="_blank">
+                        <img class="theme-icon" src="/icons/github-mark.svg" data-light-icon="/icons/github-mark.svg"
+                            data-dark-icon="/icons/github-mark-white.svg" alt="GitHub">
+                        <span class="creator-name">GitHub</span>
                     </a>
                 </li>
 
                 <li class="card">
-                    <a href="https://throne.com/azzy123" target="_blank">
-                        <img src="/icons/throne.svg" alt="Throne">
+                    <a href="https://throne.com/thedoctorttv" target="_blank">
+                        <img src="/icons/throne.svg" alt="My Wishlist">
                         <span class="creator-name">Throne</span>
                     </a>
                 </li>
 
                 <li class="card">
-                    <a href="https://en.pronouns.page/@azzy123" target="_blank">
-                        <img src="/icons/pronoun.svg" alt="Pronouns">
-                        <span class="creator-name">Pronouns</span>
+                    <a href="https://ko-fi.com/W7W85M9HD" target="_blank">
+                        <img src="/icons/ko-fi.svg" alt="Ko-Fi">
+                        <span class="creator-name">Ko-Fi</span>
+                    </a>
+                </li>
+
+                <li class="card">
+                    <a href="https://vrchat.com/home/user/usr_c91b107f-da91-4366-af50-bcc3b30e9175" target="_blank">
+                        <img src="/icons/vrchat.svg" alt="VRChat Profile">
+                        <span class="creator-name">VRChat</span>
+                    </a>
+                </li>
+
+                <li class="card">
+                    <a href="https://vrc.group/DOCTOR.2543" target="_blank">
+                        <img src="/icons/vrchat-group.svg" alt="VRChat Group">
+                        <span class="creator-name">Group</span>
+                    </a>
+                </li>
+
+                <li class="card">
+                    <a href="https://www.livechart.me/users/TheDoctorTTV/library" target="_blank">
+                        <img src="/icons/LiveChart.webp" alt="LiveChart">
+                        <span class="creator-name">Anime</span>
+                    </a>
+                </li>
+
+                <li class="card">
+                    <a href="https://thetimevortex.net/discord" target="_blank">
+                        <img src="/icons/Discord.svg" alt="Discord Server">
+                        <span class="creator-name">Discord</span>
                     </a>
                 </li>
             </ul>
-
 
 
         </div>
