--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/assets/styles/style.css">
     <title>TheTimeVortex</title>
     <link rel="shortcut icon" type="image/x-icon" href="\icons\WebsiteLogo.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="\icons\WebsiteLogo.ico">
@@ -12,12 +12,12 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="TheTimeVortex" />
     <meta property="og:description" content="A group of creators making entertainment." />
-    <meta property="og:url" content="https://thetimevortex.net" />
+    <meta property="og:url" content="https://thetimevortex.net/pages/index.html" />
     <meta property="og:image" content="icons/WebsiteLogo.ico" />
-    <script src="/js/header-footer.js"></script>
-    <script type="text/javascript" src="/js/darkmode.js" defer></script>
-    <script src="/public/auth.js" defer></script>
-    <script src="/public/creator-list.js" defer></script>
+    <script src="/assets/scripts/header-footer.js"></script>
+    <script type="text/javascript" src="/assets/scripts/darkmode.js" defer></script>
+    <script src="/assets/scripts/auth.js" defer></script>
+    <script src="/assets/scripts/creator-list.js" defer></script>
     <script>
         (function () {
             const darkmode = localStorage.getItem('darkmode');
