--- a/pages/td-commands.html
+++ b/pages/td-commands.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <link href="/style.css" rel="stylesheet" />
+    <link href="/assets/styles/style.css" rel="stylesheet" />
     <title>TheTimeVortex</title>
     <link href="\icons\WebsiteLogo.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="\icons\WebsiteLogo.ico" rel="apple-touch-icon" sizes="180x180" />
@@ -13,11 +13,11 @@
     <meta content="website" property="og:type" />
     <meta content="TheTimeVortex" property="og:title">
     <meta content="A group of creators making entertainment." property="og:description">
-    <meta content="https://thetimevortex.net" property="og:url">
+    <meta content="https://thetimevortex.net/pages/td-commands.html" property="og:url">
     <meta content="icons/WebsiteLogo.ico" property="og:image" />
-    <script src="/js/header-footer.js"></script>
-    <script defer="" src="/js/darkmode.js" type="text/javascript"></script>
-    <script src="/public/auth.js"></script>
+    <script src="/assets/scripts/header-footer.js"></script>
+    <script defer="" src="/assets/scripts/darkmode.js" type="text/javascript"></script>
+    <script src="/assets/scripts/auth.js"></script>
     <script>
         (function () {
             const darkmode = localStorage.getItem('darkmode');
