--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <h1>Discord Timestamp Generator</h1>
             <p>Use this tool to create markdown text which displays times in each user's local timezone. Just input a
                 time and copy the markdown below into Discord.</p>
-            <a href="discord-timestamp.html">Discord Timestamp Generator</a>
+            <a href="/pages/discord-timestamp.html">Discord Timestamp Generator</a>
         </div>
     </div>
 
