Improve CSS Styling

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <p>
                 This Realm is a <strong>Bedrock modpack/addon experience</strong> — not just vanilla Minecraft!
                 <br><br>
-            <h3><a class="invite" href="https://realms.gg/RAdcUY9U6UL_pCM" target="_blank" rel="noopener">Join the
+            <h3><a class="discordinvite" href="https://realms.gg/RAdcUY9U6UL_pCM" target="_blank" rel="noopener">Join the
                     Realm</a></h3>
             </p>
             <br>
