--- a/pages/profile.html
+++ b/pages/profile.html
@@ -65,7 +65,7 @@
               <button class="invite is-hidden" id="open-admin">Open Admin</button>
               <button class="invite is-hidden" id="my-page">My Page</button>
               <a class="invite is-hidden" id="edit-page" href="/pages/creators/edit.html">Edit Page</a>
-              <select class="is-hidden" id="edit-any-page"><option value="">Edit any page...</option></select>
+              <select class="is-hidden invite" id="edit-any-page"><option value="">Edit any page...</option></select>
             </div>
 
           </div>
