--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -82,15 +82,27 @@
                 </p>
 
                 <br>
-                <h2>Local Storage</h2>
-                <p>TheTimeVortex does not use cookies. Instead, we use your browser’s <strong>localStorage</strong> to
-                    save simple
-                    preferences, such as your chosen theme (light, dark, or system). This information never leaves your
-                    device and
-                    is not shared with us or any third party.</p>
-                <p>If you prefer, you can clear or disable localStorage in your browser settings, though some features
-                    (like theme
-                    preference) may not work as intended.</p>
+                <h2>Local Storage and Cookies</h2>
+                <p>TheTimeVortex uses both <strong>localStorage</strong> and <strong>cookies</strong> to improve your
+                    experience:</p>
+
+                <ul>
+                    <li><strong>Local Storage:</strong> We use your browser’s localStorage to save simple preferences,
+                        such as your
+                        chosen theme (light, dark, or system). This information never leaves your device and is not
+                        shared with us or
+                        any third party.</li>
+                    <li><strong>Cookies:</strong> We use cookies only for authentication purposes when you log in with
+                        Discord OAuth.
+                        These cookies help us verify your session securely and are not used for tracking, analytics, or
+                        advertising.
+                    </li>
+                </ul>
+
+                <p>You can clear or disable localStorage and cookies in your browser settings at any time, but please
+                    note that some
+                    features (such as theme preference or staying signed in) may not work as intended if disabled.</p>
+
 
                 <br>
                 <h2>Third-Party Services</h2>
